# cocos-external

./: CMakeLists.txt  readme.md
RapidJson/: CMakeLists.txt
SpriterPlusPlus/: CMakeLists.txt
SpriterPlusPlus/spriterengine/: CMakeLists.txt
SpriterPlusPlus/spriterengine/entity/: entityinstance.cpp  entityinstance.h  entityinstancedata.cpp  entityinstancedata.h
SpriterPlusPlus/spriterengine/file/: file.cpp  file.h
SpriterPlusPlus/spriterengine/objectinfo/: boneinstanceinfo.cpp  boneobjectinfo.cpp  boxobjectinfo.cpp  entityobjectinfo.cpp  pointobjectinfo.cpp  spriteobjectinfo.cpp  universalobjectinterface.h
SpriterPlusPlus/spriterengine/objectref/: objectrefinstance.cpp
chipmunk/: CMakeLists.txt
clipper/: CMakeLists.txt
recast/: CMakeLists.txt
steam/: CMakeLists.txt
unzip/: CMakeLists.txt  ioapi.cpp
xxtea/: CMakeLists.txt
